Fix description paragraph spacing

--- a/src/Components/LocationNotes/LocationNotes.css
+++ b/src/Components/LocationNotes/LocationNotes.css
@@ -53,6 +53,11 @@
     color: white;
 }
 
+/* Had issues with specificity here, so had to chain these together to make this affect only the location description*/
+#location-notes-data > p.location-notes-location-description {
+    align-self: flex-start;
+}
+
 #location-notes-data > p:not(:first-child) {
     margin-top: 0.7rem;
 }
@@ -79,7 +84,7 @@
 .description-section {
     display: flex;
     flex-direction: column;
-    /* gap: 0.5rem; */
+    gap: 0.5rem;
 }
 
 h4 {
